# FastAPI-con-MongoDB-y-JWT

./: .gitignore  README.md  main.py  pyproject.toml
config/: db.py
documents/: users.py
functions/: jwt.py
middlewares/: verify_token_route.py
models/: users_model.py
repositories/: users.py
routes/: auth_route.py  user_route.py
schemas/: user_schemas.py
