[tool.poetry]
name = "fastapi-con-mongodb-y-jwt"
version = "0.1.0"
description = ""
authors = ["Edward Gomez <egoan82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pyjwt = "^2.8.0"
certifi = "^2024.2.2"
python-dotenv = "^1.0.1"
pymongo = "^4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
